@@ -1,6 +1,11 @@
 # ChangeLog for www-servers/lighttpd
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-servers/lighttpd/ChangeLog,v 1.51 2005/10/12 12:51:21 ka0ttic Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-servers/lighttpd/ChangeLog,v 1.52 2005/11/03 16:10:44 ka0ttic Exp $
+
+*lighttpd-1.4.7 (03 Nov 2005)
+
+  03 Nov 2005; Aaron Walker <ka0ttic@gentoo.org> +lighttpd-1.4.7.ebuild:
+  Version bump.
 
   12 Oct 2005; Aaron Walker <ka0ttic@gentoo.org> files/lighttpd.initd:
   'use slapd' in init script so that slapd gets started before lighttpd if
